syntax = "proto3";
package rollapp.cwerrors.v1;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/base/v1beta1/coin.proto";
import "rollapp/cwerrors/v1/params.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/dymensionxyz/rollapp-wasm/x/cwerrors/types";

// Msg defines the cwerrors Msg service.
service Msg {
  // SubscribeToError defines an operation which will register a contract for a
  // sudo callback on errors
  rpc SubscribeToError(MsgSubscribeToError)
      returns (MsgSubscribeToErrorResponse);

  // UpdateParams is used for updating module params.
  rpc UpdateParams(MsgUpdateParams) 
      returns (MsgUpdateParamsResponse);
}

// MsgSubscribeToError is the Msg/SubscribeToError request type.
message MsgSubscribeToError {
  option (cosmos.msg.v1.signer) = "sender";
  // sender is the address of who is registering the contarcts for callback on
  // error
  string sender = 1;
  // contract is the address of the contract that will be called on error
  string contract_address = 2;
  // fee is the subscription fee for the feature (current no fee is charged for
  // this feature)
  cosmos.base.v1beta1.Coin fee = 3 [ (gogoproto.nullable) = false ];
}

// MsgSubscribeToErrorResponse defines the response structure for executing a
// MsgSubscribeToError message.
message MsgSubscribeToErrorResponse {
  // subscription_valid_till is the block height till which the subscription is
  // valid
  int64 subscription_valid_till = 1;
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a MsgUpdateParams message.
message MsgUpdateParamsResponse {}